0.5.0
Score
	no long accept rdf or record handlers as input, use transfer to load into model first
Transfer
	Add delete model before import flag
	Allow for loading from an record handler 
Junit testing is now implemented; more tests to come 
New release script for building, testing, and uploading new releases to sourceforge
Added rpm to maven build -- NOTE utilize the generated rpm at your own risk -- please file bugs if found

0.4.5
fix authorName bestMatch bug in scoring
make staging default model for qualify and transfer
add ability to load from RDF file as input for transfer

0.4.4
Fix scoring run failure when forename is blank
Authors are listed out of order
Dates are missing on many articles
MeSH terms are duplicated
articles not listed on their journal page under "publication venue for"

0.4.3
Add force option and author name matching to scoring
fix version information in debian package

0.4.2
Patch for .metadata error on Windows

0.4.1
Fix null pointer exception inside fetch
Fix mesh terms and author stubs

0.4
Design

    * Clean up of Configuration Utilities
    * Simplification of Design for execution 

Virtual Machine

    * Add harvester to virtual machine 

Scoring

    * Must allow for parameters to be passed in from command line for any algorithm
    * Must allow for process flow and order dependency 

Translating

    * Definition of VIVO to Medline Relationship of Publication Types (ie Article, Demo, etc) 
    
0.3.2
Fix tarball
Fixes exception when executing fetch queries

0.3.1
Fix publication linking issues

0.3
Initial release for public consumption