@@ -13,7 +13,7 @@ package org.vivoweb.ingest.test.qualify;
 import junit.framework.TestCase;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.vivoweb.ingest.qualify.SPARQLQualify;
+import org.vivoweb.ingest.qualify.Qualify;
 import org.vivoweb.ingest.util.repo.JenaConnect;
 import com.hp.hpl.jena.rdf.model.Property;
 import com.hp.hpl.jena.rdf.model.Resource;
@@ -22,11 +22,11 @@ import com.hp.hpl.jena.rdf.model.Resource;
  * @author Christopher Haines (hainesc@ctrip.ufl.edu)
  * @author Stephen Williams (swilliams@ctrip.ufl.edu)
  */
-public class SPARQLQualifyTest extends TestCase {
+public class QualifyTest extends TestCase {
 	/**
 	 * Log4J Logger
 	 */
-	private static Log log = LogFactory.getLog(SPARQLQualifyTest.class);
+	private static Log log = LogFactory.getLog(QualifyTest.class);
 	/** */private static final String dbClass = "org.h2.Driver";
 	/** */private static final String dbType = "HSQLDB";
 	/** */private static final String dbUrl = "jdbc:h2:mem:TestSPARQLQualifyModel;MODE=HSQLDB";
@@ -48,7 +48,7 @@ public class SPARQLQualifyTest extends TestCase {
 	}
 	
 	/**
-	 * Test method for {@link org.vivoweb.ingest.qualify.SPARQLQualify#main(java.lang.String[]) main(String... args)} using regex replace.
+	 * Test method for {@link org.vivoweb.ingest.qualify.Qualify#main(java.lang.String[]) main(String... args)} using regex replace.
 	 */
 	public void testRegexReplace(){
 		try {
@@ -60,7 +60,7 @@ public class SPARQLQualifyTest extends TestCase {
 			this.jena.getJenaModel().add(res3, this.label, "I A T R R");
 			String expectedValue = "I Am Testing Regex Replace";
 			//call qualify
-			new SPARQLQualify(this.jena, this.label.getURI(), ".*?IATRR.*?", expectedValue, null, true).executeTask();
+			new Qualify(this.jena, this.label.getURI(), ".*?IATRR.*?", expectedValue, null, true).executeTask();
 			assertEquals(expectedValue, this.jena.getJenaModel().getProperty(res1, this.label).getString());
 			assertEquals(expectedValue, this.jena.getJenaModel().getProperty(res2, this.label).getString());
 			assertFalse(this.jena.getJenaModel().getProperty(res3, this.label).getString().equals(expectedValue));
@@ -70,7 +70,7 @@ public class SPARQLQualifyTest extends TestCase {
 	}
 
 	/**
-	 * Test method for {@link org.vivoweb.ingest.qualify.SPARQLQualify#main(java.lang.String[]) main(String... args)} using string replace.
+	 * Test method for {@link org.vivoweb.ingest.qualify.Qualify#main(java.lang.String[]) main(String... args)} using string replace.
 	 */
 	public void testStringReplace(){
 		try {
@@ -82,7 +82,7 @@ public class SPARQLQualifyTest extends TestCase {
 			this.jena.getJenaModel().add(res3, this.label, "I A T T R");
 			String expectedValue = "I Am Testing Test Replace";
 			//call qualify
-			new SPARQLQualify(this.jena, this.label.getURI(), "IATTR", expectedValue, null, false).executeTask();
+			new Qualify(this.jena, this.label.getURI(), "IATTR", expectedValue, null, false).executeTask();
 			//FIXME woo
 			assertEquals(expectedValue, this.jena.getJenaModel().getProperty(res1, this.label).getString());
 			assertFalse(this.jena.getJenaModel().getProperty(res2, this.label).getString().equals(expectedValue));
